# yazbunu

./: .gitignore  LICENSE  README.md  pyproject.toml
src/yazbunu/: __init__.py  __main__.py  auth.py  formatter.py  server.py
src/yazbunu/static/: manifest.json  sw.js  themes.js  viewer.html  worker.js
tests/: test_worker.mjs  test_yazbunu.py  test_yazbunu_server.py
