[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "yazbunu"
version = "0.2.0"
description = "Lightweight structured JSONL logging with a mobile-friendly web viewer"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
server = ["aiohttp>=3.9.0"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
yazbunu-server = "yazbunu.server:main"
